<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_marker_models_1</name>
  <version>0.0.0</version>
  <description>Aruco marker models for simulation in Gazebo</description>
  <maintainer email="admin@alex-linux">admin</maintainer>
  <license>MIT<license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
